<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context="com.example.fisicfacs.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="48dp">

    <TextView
        android:id="@+id/sobreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/sobre"
        android:textAllCaps="false"
        android:textColor="#050717"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/perfilText"
        app:layout_constraintTop_toBottomOf="@+id/sobreButton"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/historicoButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#050717"
        android:text="@string/hist_rico"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/configButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#050717"
        android:text="@string/configuracoes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/monitorarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        tools:visibility="visible" />

    <Button
        android:id="@+id/monitorarButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#050717"
        android:text="@string/monitorar_exerc_cios"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/historicoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="556dp"
        android:layout_height="368dp"
        android:layout_marginBottom="240dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloText"
        app:layout_constraintVertical_bias="0.802"
        app:srcCompat="@mipmap/logo_principal_"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tituloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/fisicfacs"
        android:textColor="#000"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="77dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/avatar_1s" />

    <TextView
        android:id="@+id/perfilText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/Perfil"
        android:textAllCaps="false"
        android:textColor="#050717"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/sobreButton"
        android:layout_width="79dp"
        android:layout_height="69dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/configuracoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/info_img_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>