<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaConfig"
    android:background="#050717">

    <Button
        android:id="@+id/salvarButtonConfig"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FF9800"
        android:text="@string/salvar"
        android:textColor="#050717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/configText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/configuracoes"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/teText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/teText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tipo_de_exerc_cio"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerOM"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tmText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/tipo_do_mapa"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTM"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginBottom="156dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTE"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/uvText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/unidade_de_velocidade"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerUV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerUV"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/omText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/omText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/orienta_o_do_mapa"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerOM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/voltarButtonConfig"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FF9800"
        android:text="@string/voltar"
        android:textColor="#050717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>