<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050717">

    <Button
        android:id="@+id/voltarButtonPerfil"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#FF9800"
        android:text="@string/voltar"
        android:textColor="#050717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataText"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/meuPerfilText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/meu_perfil"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/dataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/data_de_nascimento"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alturaBox" />

    <Button
        android:id="@+id/salvarButtonPerfil"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#FF9800"
        android:text="@string/salvar"
        android:textColor="#050717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataText"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/sexoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/sexo"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeBox" />

    <EditText
        android:id="@+id/dataBox"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#F8FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/data_de_nascimento"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#00FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/alturaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="248dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/altura"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pesoBox" />

    <TextView
        android:id="@+id/pesoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/peso"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/pesoBox"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/peso"
        android:inputType="number"
        android:minHeight="42dp"
        android:textAlignment="center"
        android:textColorHint="#004E342E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pesoText"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/alturaBox"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:minHeight="42dp"
        android:textAlignment="center"
        android:textColorHint="#004E342E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alturaText"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/telalogin_spinner"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/sexo"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pesoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoText"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/nomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="548dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/nome"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nomeBox"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="492dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:minHeight="42dp"
        android:textAlignment="center"
        android:textColorHint="#004E342E"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/userimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/userimg"
        app:layout_constraintBottom_toBottomOf="@+id/meuPerfilText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/avatar_user_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>